--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 
 .App-logo {
-  height: 40vmin;
   pointer-events: none;
 }
 
@@ -11,8 +10,7 @@
 }
 
 .App {
-  min-height: 100vh;
-  background-color: blue
+  min-height: 100%;
 }
 
 .App-link {
